--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -234,8 +234,8 @@ limitations under the License. -->
   <string name="news_date_time">%1$s um %2$s Uhr</string>
   <string name="data_headline">Übersicht</string>
   <string name="donate">Donate</string>
-  <string name="email_feedback_summary">Senden Sie uns Anregungen und Verbesserungen.</string>
-  <string name="email_feedback_title">EMail senden</string>
+  <string name="email_feedback_summary">Eine E-Mail direkt an die Entwickler.</string>
+  <string name="email_feedback_title">E-Mail senden</string>
   <string name="bought_for">Gekauft für %1$s</string>
   <string name="version">Version</string>
   <string name="example_List_delete_all">\n\n***\nWählen sie in den Einstellungen die Funktion \'Alle Daten entfernen\', um diese Beispielliste zu löschen.\n***</string>
