--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -285,4 +285,5 @@ limitations under the License. -->
   <string name="reset">Reset</string>
   <string name="dividend_cycle">Dividend Cycle</string>
   <string name="dividend_updated">Dividend updated.</string>
+  <string name="realtime">Always use Realtime</string>
 </resources>
