--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,8 +121,8 @@ limitations under the License. -->
   <string name="import_section_header">Import</string>
   <string name="button_import">Import</string>
   <string name="import_list_desc">Import stock list from a .txt, .csv or .json file.</string>
-  <string name="import_error">The selected file could not be imported.</string>
-  <string name="import_csv_symbolcolumn_error">The selected file could not be imported. The column for the stock name is missing.</string>
+  <string name="import_error">The selected file could not be imported.\n%1$s</string>
+  <string name="import_csv_column_error">The selected file could not be imported. The column \'%1$s\' is missing.</string>
   <string name="import_msg">%1$s stocks imported.</string>
   <string name="export_msg">Your portfolio with %1$d stocks was exported to a .json file.</string>
   <string name="export_list">Export portfolio</string>
