--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -286,4 +286,7 @@ limitations under the License. -->
   <string name="dividend_updated">Dividendenwert aktualisiert.</string>
   <string name="realtime">Immer Realtime verwenden</string>
   <string name="linegraph">Liniendiagramm</string>
+  <string name="use_chart_overlay_symbol">Vergleichskurve in der Chart-Darstellung</string>
+  <string name="use_chart_overlay_symbol_desc">Stellt einen zusätzlichen Verlauf eines anderen Aktienwerts zum Vergleich in der Chart-Darstellung dar.</string>
+  <string name="chart_overlay_symbol_title">Zu verwendendes Aktienkürzel</string>
 </resources>
