update json import mime type

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -119,6 +119,7 @@ limitations under the License. -->
   <string name="button_import">Importieren</string>
   <string name="import_list_desc">Aktienliste von einer Text-Datei, CSV-Datei oder JSON-Datei importieren.</string>
   <string name="import_error">Die ausgewählte Datei konnte nicht importiert werden.\n%1$s</string>
+  <string name="import_mimetype_error">Der Medientyp \'%1$s\' wird nicht unterstützt.</string>
   <string name="import_csv_column_error">Die ausgewählte CSV-Datei konnte nicht importiert werden. Die Spalte \'%1$s\' ist nicht vorhanden.</string>
   <string name="import_msg">%1$s Aktien wurden importiert</string>
   <string name="export_msg">Ihre Aktienliste mit %1$d Aktiendaten wurde in eine .JSON-Datei exportiert.</string>
