--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,12 +33,16 @@ limitations under the License. -->
     <item quantity="one">%1$s stock was deleted in the portfolio.</item>
     <item quantity="other">%1$s stocks were deleted in the portfolio.</item>
   </plurals>
+  <plurals name="asset_removed_updated">
+    <item quantity="one">Portfolio was updated with %1$s deleted stock.</item>
+    <item quantity="other">Portfolio was updated with %1$s deleted stocks.</item>
+  </plurals>
   <plurals name="delete_asset_msg">
-    <item quantity="one">%1$s stock for %2$s was deleted from the portfolio..</item>
+    <item quantity="one">%1$s stock for %2$s was deleted from the portfolio.</item>
     <item quantity="other">%1$s stocks for %2$s were deleted from the portfolio.</item>
   </plurals>
   <plurals name="delete_removed_asset_msg">
-    <item quantity="one">%1$s stock for %2$s was deleted from the portfolio..</item>
+    <item quantity="one">%1$s stock for %2$s was deleted from the portfolio.</item>
     <item quantity="other">%1$s stocks for %2$s were deleted from the portfolio.</item>
   </plurals>
   <plurals name="delete_asset_confirm">
