--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,7 +170,7 @@ limitations under the License. -->
   <string name="invalid_split_entry">The stock split ratio must be greater than 0 and less or equal than 20.</string>
   <string name="split_min_price">Stock split ratio would result in a too small price.</string>
   <string name="split_min_shares">Stock split ratio would result in a too small amount of shares.</string>
-  <string name="asset_summary_text">Total assets</string>
+  <string name="asset_summary_text">Total assets:</string>
   <string name="title_activity_add">Add stocks</string>
   <string name="title_activity_stockdata">Stock details</string>
   <string name="add_stock">Added stock \'%1$s\'.</string>
@@ -198,6 +198,7 @@ limitations under the License. -->
   <string name="summary_events">Events</string>
   <string name="summary_note">Notes</string>
   <string name="summary_number_of_stocks">Number of stocks</string>
+  <string name="summary_capital_gain">Executed Capital Gain</string>
   <string name="summary_total_purchase_price">Total purchase price</string>
   <string name="summary_total_assets">Total assets</string>
   <string name="summary_gain">Gain</string>
