--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -198,9 +198,7 @@ limitations under the License. -->
   <string name="summary_capital_gain">Ausgeführter Kapitalgewinn</string>
   <string name="summary_total_purchase_price">Gesamtkaufpreis</string>
   <string name="summary_total_assets">Gesamtbestand</string>
-  <string name="summary_gain">Gewinn</string>
-  <string name="summary_loss">Verlust</string>
-  <string name="summary_gain_loss">Gewinn - Verlust</string>
+  <string name="summary_gain_loss">Gewinn</string>
   <string name="summary_dividend_assets">Bestand mit Dividende</string>
   <string name="summary_no_dividend_assets">Bestand ohne Dividende</string>
   <string name="summary_dividend_per_year">Dividende pro Jahr</string>
