--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -167,6 +167,8 @@ limitations under the License. -->
   <string name="invalid_split_entry">Das Aktiensplitverhältnis muss größer als 0 und kleiner oder gleich 20 sein.</string>
   <string name="split_min_price">Das Aktiensplitverhältnis würde in einen zu kleinen Preis resultieren.</string>
   <string name="split_min_shares">Das Aktiensplitverhältnis würde in einer zu kleinen Aktienanzahl resultieren.</string>
+  <string name="asset_share_not_empty">Geben Sie eine Aktienanzahl ein.</string>
+  <string name="asset_price_not_empty">Geben Sie einen Preis ein.</string>
   <string name="asset_summary_text">Gesamtaktienbestand:</string>
   <string name="title_activity_add">Aktien hinzufügen</string>
   <string name="title_activity_stockdata">Aktiendetails</string>
@@ -310,5 +312,5 @@ limitations under the License. -->
   <string name="data_provider_details">Datensatz für %1$s</string>
   <string name="data_provider_details_sorted">[Sortiert]</string>
   <string name="data_provider_details_unsorted">[Unsortiert]</string>
-  <string name="remove_price">Optionaler Verkaufspreis</string>
+  <string name="remove_price">Verkaufspreis</string>
 </resources>
