--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -193,6 +193,7 @@ limitations under the License. -->
   <string name="alert_event_notification">Ereignismeldung für Aktie %1$s\nEreignis \'%2$s\'\n%3$s</string>
   <string name="summary_stocks">Aktien</string>
   <string name="summary_stocks_with_assets">Aktien mit Bestand</string>
+  <string name="summary_bought_sold">Gekauft/Verkauft</string>
   <string name="summary_alerts">Benachrichtigungen</string>
   <string name="summary_events">Ereignisse</string>
   <string name="summary_note">Anmerkungen</string>
@@ -313,4 +314,7 @@ limitations under the License. -->
   <string name="data_provider_details_sorted">[Sortiert]</string>
   <string name="data_provider_details_unsorted">[Unsortiert]</string>
   <string name="remove_price">Verkaufspreis</string>
+  <string name="timeline_bought">Gekauft am %1$s, %2$s@%3$s (%4$s)</string>
+  <string name="timeline_sold">Verkauft am %1$s, %2$s@%3$s (%4$s)</string>
+  <string name="timeline_unknown_date">Datum nicht angegeben</string>
 </resources>
