--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,6 +196,7 @@ limitations under the License. -->
   <string name="alert_event_notification">Event notification for stock %1$s\nEvent \'%2$s\'\n%3$s</string>
   <string name="summary_stocks">Stocks</string>
   <string name="summary_stocks_with_assets">Stocks with assets</string>
+  <string name="summary_bought_sold">Bought/Sold</string>
   <string name="summary_alerts">Alerts</string>
   <string name="summary_events">Events</string>
   <string name="summary_note">Notes</string>
@@ -316,4 +317,7 @@ limitations under the License. -->
   <string name="data_provider_details_sorted">[Sorted]</string>
   <string name="data_provider_details_unsorted">[Unsorted]</string>
   <string name="remove_price">Sell price</string>
+  <string name="timeline_bought">Bought on %1$s, %2$s@%3$s (%4$s)</string>
+  <string name="timeline_sold">Sold on %1$s, %2$s@%3$s (%4$s)</string>
+  <string name="timeline_unknown_date">Date not specified</string>
 </resources>
