--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -314,7 +314,7 @@ limitations under the License. -->
   <string name="data_provider_details_sorted">[Sortiert]</string>
   <string name="data_provider_details_unsorted">[Unsortiert]</string>
   <string name="remove_price">Verkaufspreis</string>
-  <string name="timeline_bought">Gekauft am %1$s, %2$s@%3$s (%4$s)</string>
-  <string name="timeline_sold">Verkauft am %1$s, %2$s@%3$s (%4$s)</string>
+  <string name="timeline_bought">%1$s@%2$s (%3$s), Gekauft am %4$s.</string>
+  <string name="timeline_sold">%1$s@%2$s (%3$s), Verkauft am %4$s.</string>
   <string name="timeline_unknown_date">Datum nicht angegeben</string>
 </resources>
