--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,12 +125,12 @@ limitations under the License. -->
   <string name="add">Add</string>
   <string name="update_notes">Update notes</string>
   <string name="invalid_number">Invalid number</string>
-  <string name="number_of_shares">Number of shares</string>
+  <string name="number_of_stock">Number of shares</string>
   <string name="price">Price</string>
-  <string name="shares">Shares</string>
+  <string name="amount">Shares</string>
   <string name="value">Value</string>
-  <string name="no_total_shares">Buy some shares first.</string>
-  <string name="remove_shares_exceeds_total_shares">Amount must be smaller than the total amount of shares.</string>
+  <string name="no_total_amount">Buy some shares first.</string>
+  <string name="remove_amount_exceeds_total_amount">Amount must be smaller than the total amount of shares.</string>
   <string name="dividend_in_list">Dividend:</string>
   <string name="standard_group">Not assigned</string>
   <string name="import_section_header">Import</string>
@@ -150,8 +150,8 @@ limitations under the License. -->
   <string name="delete_all_title">Delete all</string>
   <string name="delete_all_confirm">Are you sure?</string>
   <string name="delete_all_desc">Delete all stocks.</string>
-  <string name="shares_not_zero">The number of shares must not be 0.</string>
-  <string name="removed_shares_exceed_existing">You remove more stocks than you own. The amount will be adjusted from %1$s to %2$s.</string>
+  <string name="amount_not_zero">The number of shares must not be 0.</string>
+  <string name="removed_amount_exceed_existing">You remove more stocks than you own. The amount will be adjusted from %1$s to %2$s.</string>
   <string name="price_not_zero">The price of the stock must not be 0.</string>
   <string name="add_asset">Add asset</string>
   <string name="remove_asset">Remove asset</string>
@@ -168,7 +168,7 @@ limitations under the License. -->
   <string name="split_ratio">Stock split ratio, 1:n</string>
   <string name="invalid_split_entry">The stock split ratio must be greater than 0 and less or equal than 20.</string>
   <string name="split_min_price">Stock split ratio would result in a too small price.</string>
-  <string name="split_min_shares">Stock split ratio would result in a too small amount of shares.</string>
+  <string name="split_min_amount">Stock split ratio would result in a too small amount of shares.</string>
   <string name="asset_share_not_empty">Enter a number of stocks.</string>
   <string name="asset_price_not_empty">Enter a price for the stock.</string>
   <string name="asset_summary_text">Total assets:</string>
