--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -319,8 +319,8 @@ limitations under the License. -->
   <string name="timeline_bought">%1$s@%2$s (%3$s), Gekauft am %4$s.</string>
   <string name="timeline_sold">%1$s@%2$s (%3$s), Verkauft am %4$s.</string>
   <string name="timeline_unknown_date">Datum nicht angegeben</string>
-  <string name="displayed_views">Angezeigte</string>
-  <string name="displayed_views_summary">123</string>
-  <string name="displayed_views_dialog_message">a</string>
-  <string name="displayed_views_dialog_title">b</string>
+  <string name="displayed_views">Angezeigte Darstellungen</string>
+  <string name="displayed_views_summary">Wählen Sie aus was angezeigt werden soll.</string>
+  <string name="displayed_views_dialog_title">Einstellungsänderung</string>
+  <string name="displayed_views_dialog_message">Für diese Einstellung muss die App neu gestartet werden.</string>
 </resources>
