--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -300,7 +300,6 @@ limitations under the License. -->
   <string name="dividend_exdate">Ex-Dividend</string>
   <string name="totaldividend_payed">Ausgezahlte Dividende</string>
   <string name="totaldividend_payedYTD">Ausgezahlte Dividende YTD</string>
-  <string name="no_dividend_data">Keine Dividendendaten vorhanden.</string>
   <string name="reset_portfolios_title">Portfolios zurücksetzen</string>
   <string name="reset_portfolios_desc">Setzt alle Portfolios zum Standard-Portfolio zurück.</string>
   <string name="reset_portfolios_confirm">Sind Sie sich sicher, dass Sie alle Portfolios zum Standard-Portfolio zurücksetzen wollen?</string>
@@ -323,4 +322,8 @@ limitations under the License. -->
   <string name="displayed_views_summary">Wählen Sie aus was angezeigt werden soll.</string>
   <string name="displayed_views_dialog_title">Einstellungsänderung</string>
   <string name="displayed_views_dialog_message">Für diese Einstellung muss die App neu gestartet werden.</string>
+  <string name="annual_dividend_headline">Jährlicher Dividendensatz</string>
+  <string name="set_annual_dividend_label">Neuer Dividendensatz</string>
+  <string name="onlineAnnualDividendData">Onlinedaten</string>
+  <string name="no_dividend_data">Keine Dividendendaten vorhanden.</string>
 </resources>
