horz list scrolling

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -326,4 +326,5 @@ limitations under the License. -->
   <string name="set_annual_dividend_label">Neuer Dividendensatz</string>
   <string name="onlineAnnualDividendData">Onlinedaten</string>
   <string name="no_dividend_data">Keine Online-Dividendendaten vorhanden.</string>
+  <string name="date">Datum</string>
 </resources>
